Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47679

Windows [REG 5.3->5.4]: Cannot input Chinese into QGraphicsTextItem

XMLWordPrintable

    • b14550fa45395d6b57d958bb4a4e42212ba0da0f (qtbase/5.5, 26.8.2015, 5.5.1)

      Qt\Qt5.5.0\Examples\Qt-5.5\widgets\graphicsview\diagramscene

      system: win7

      after make&run

      I created Text item, I can not input chinese.

      There is no problerm in Qt5.3.2.

        1. qtbug47679_diag.diff
          2 kB
          Friedemann Kleint
        2. qtbug47679.zip
          2 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            shangu shangu
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes