Windows/Input context: Update enabling of IME in in update(), too.

Amend change b55f88caba339a49bf0ebabfa324dde523c2b866 by splitting
out the enabling into a separate function and call that when
QWindowsInputContext::update() is triggered to reflect updates
of the microfocus in QGraphicsView or item view widgets.

Task-number: QTBUG-47679
Task-number: QTBUG-47705
Task-number: QTBUG-40691
Change-Id: I84a6647944f1aaedcd72d7060cc90e29a177f577
Reviewed-by: Liang Qi <liang.qi@theqtcompany.com>
Reviewed-by: Andy Shaw <andy.shaw@theqtcompany.com>

cregit: b14550fa45395d6b57d958bb4a4e42212ba0da0f https://github.com/qt/qtbase/commit/b14550fa45395d6b57d958bb4a4e42212ba0da0f